made it prettier

--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,23 @@ body { margin: 0; padding: 0; }
   left: 0;
   padding: 10px;
 }
+
+
+.btn {
+  background: linear-gradient(2.08deg, #FF9320 -0.8%, rgba(255, 147, 32, 0) 79.94%), #FAC02C;
+  box-shadow: -3px 5px 10px 1px rgba(0, 0, 0, 0.25);
+  border: none;
+  color: white;
+  padding: 8px 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1em;
+  margin: 4px 2px;
+  border-radius: 12px;
+  font-family: 'Comfortaa', cursive;
+}
+.btn:hover {
+  background: linear-gradient(179.26deg, #ffffff70 0.63%, rgba(255, 147, 32, 0) 99.56%), #FAC02C;
+  box-shadow: 0px 3px 7px 1px rgba(0, 0, 0, 0.3);
+}
